<resources>
    <string name="app_name">Quiz App</string>
    <string name="quiz_app">Quiz App</string>
    <string name="welcome">Welcome</string>
    <string name="enter_name">Enter Name</string>
    <string name="name">Name</string>
    <string name="start">Start</string>
    <string name="flagQuestion">What country does this flag belong to?</string>
    <string name="flag_image">Flag image</string>
    <string name="submit">Submit</string>
    <string name="title_activity_results">ResultsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>